[package]
name = "easy_quic"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rcgen = "0.13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
eframe = "0.28"
egui = "0.28"
